src/test/compile-fail/crateresolve1.rs
// aux-build:crateresolve1-1.rs
// aux-build:crateresolve1-2.rs
// aux-build:crateresolve1-3.rs
// error-pattern:multiple matching crates for `crateresolve1`

extern crate crateresolve1;

fn main() {
}
